@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2004/05/08 01:54:18 minskim Exp $
+@comment $NetBSD: PLIST,v 1.2 2004/08/04 22:56:02 minskim Exp $
 lib/X11/fonts/TTF/UnBatang.ttf
 lib/X11/fonts/TTF/UnBatangBold.ttf
 lib/X11/fonts/TTF/UnBom.ttf
@@ -11,4 +11,5 @@ lib/X11/fonts/TTF/UnPenheulim.ttf
 lib/X11/fonts/TTF/UnPilgi.ttf
 lib/X11/fonts/TTF/UnPilgiBold.ttf
 lib/X11/fonts/TTF/UnShinmun.ttf
+lib/X11/fonts/TTF/UnTaza.ttf
 lib/X11/fonts/TTF/UnYetgul.ttf
